docs(885): extraction sandbox pool in the canonical docs + config reference
03-knowledge-server.md gains an "Extraction sandbox pool" section (routing, persistent
children, frame protocol, child command, recycling, failure classification, orphan
prevention) and states the executor-replacement fix on the timeout path.
23-search-pipeline-overview.md's stage-2 row said "sandboxed with timeout + memory
guards" while nothing was in fact sandboxed; it now describes what actually runs.
08-observability.md lists the two new extraction.sandbox_* counters.
environment-variables.md documents the new auto default and the three new keys, and
drops the retired "process mode requires a command / Worker fails fast" claim.
Regenerated: runtime-config-ownership-matrix.md, llms.txt, synced skills.

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01QjAEV2EU7HivHEGeYnpCiQ